Add CRUD for AclEntryServlet, extend CinnamonClient methods.
Rename CmnGroups

Close #184 (migrate to Junit 5)